<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background_image"
>
    <TextView android:id="@+id/title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="130dp"
              android:layout_gravity="center_horizontal"
              android:text="@string/title"
              android:textColor="@color/black"
              android:textSize="30dp"
    />
    <Button android:id="@+id/insertDataYes"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="15dp"
            android:background="@drawable/button_draw"
            android:foreground="@drawable/ripple"
            android:layout_gravity="center_horizontal"
            android:text="@string/insertStringOne" />
    <Button android:id="@+id/insertDataNo"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:background="@drawable/button_draw"
            android:foreground="@drawable/ripple"
            android:layout_gravity="center_horizontal"
            android:text="@string/insertStringTwo" />
    <Button android:id="@+id/disposeNo"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:background="@drawable/button_draw"
            android:foreground="@drawable/ripple"
            android:layout_gravity="center_horizontal"
            android:text="@string/disposeString" />
    <Button android:id="@+id/dataSum"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:background="@drawable/button_draw"
            android:foreground="@drawable/ripple"
            android:layout_gravity="center_horizontal"
            android:text="@string/lookString" />
    <Button android:id="@+id/out"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:background="@drawable/button_draw"
            android:foreground="@drawable/ripple"
            android:layout_gravity="center_horizontal"
            android:text="@string/outTable" />
    <Button android:id="@+id/insertMoney"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:background="@drawable/button_draw"
            android:foreground="@drawable/ripple"
            android:layout_gravity="center_horizontal"
            android:text="@string/insertMoney" />
    <Button android:id="@+id/lookMoney"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:background="@drawable/button_draw"
            android:foreground="@drawable/ripple"
            android:layout_gravity="center_horizontal"
            android:text="@string/lookMoney" />
</LinearLayout>