<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/dialog_draw"
>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
    >
        <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:text="@string/matters"
                android:textSize="15dp"
                android:textColor="@color/black"
        />
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/matters1"
                android:textSize="15dp"
                android:hint="@string/TT"
                android:background="@drawable/edit_draw"
                android:layout_marginStart="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
    >
        <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:text="@string/headName"
                android:textSize="15dp"
                android:textColor="@color/black"
        />
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/headName1"
                android:textSize="15dp"
                android:hint="-请选择-"
                android:background="@drawable/edit_draw"
                android:layout_marginStart="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
    >
        <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:text="@string/endDate"
                android:textSize="15dp"
                android:textColor="@color/black"
        />
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/endDate1"
                android:textSize="15dp"
                android:hint="-请选择-"
                android:background="@drawable/edit_draw"
                android:layout_marginStart="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
    >
        <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="15dp"
                android:textColor="@color/black"
        />
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/price1"
                android:inputType="number|numberDecimal"
                android:textSize="15dp"
                android:hint="0.00"
                android:background="@drawable/edit_draw"
                android:layout_marginStart="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
    >
        <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="15dp"
                android:textColor="@color/black"
        />
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/number1"
                android:inputType="number|numberDecimal"
                android:textSize="15dp"
                android:hint="0.00"
                android:background="@drawable/edit_draw"
                android:layout_marginStart="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
    >
        <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:textSize="15dp"
                android:textColor="@color/black"
        />
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/unit1"
                android:textSize="15dp"
                android:hint="@string/TT"
                android:background="@drawable/edit_draw"
                android:layout_marginLeft="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
    >
        <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="15dp"
                android:textColor="@color/black"
        />
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/total1"
                android:inputType="number|numberDecimal"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="15dp"
                android:hint="0.00"
                android:background="@drawable/edit_draw"
                android:layout_marginLeft="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
    >
        <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:text="@string/workName"
                android:textSize="15dp"
                android:textColor="@color/black"
        />
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/workName1"
                android:textSize="15dp"
                android:hint="@string/TT"
                android:background="@drawable/edit_draw"
                android:layout_marginLeft="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
    >
        <Button
                android:id="@+id/saveNew"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:background="@drawable/ok_button_draw"
                android:foreground="@drawable/ripple"
                android:text="@string/yes"
                android:textSize="15dp"
                android:layout_gravity="center_horizontal"
        /><Button
            android:id="@+id/cancel"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:background="@drawable/cancel_button_draw"
            android:foreground="@drawable/ripple"
            android:text="@string/cancel"
            android:textSize="15dp"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_horizontal"
    />
    </LinearLayout>
</LinearLayout>