<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background_image"
              android:id="@+id/key"
              android:clickable="true"
              tools:ignore="MissingDefaultResource">

    <TextView android:id="@+id/title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="50dp"
              android:layout_gravity="center_horizontal"
              android:text="@string/addTitleTwo"
              android:textColor="@color/black"
              android:textSize="30dp"
    />
    <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_draw"
    >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
        >
            <TextView
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matters"
                    android:textSize="15dp"
                    android:textColor="@color/black"
            />
            <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/matters1"
                    android:textSize="15dp"
                    android:hint="@string/TT"
                    android:background="@drawable/edit_draw"
                    android:layout_marginLeft="20dp"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
        >
            <TextView
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:text="@string/oldDate"
                    android:textSize="15dp"
                    android:textColor="@color/black"
            />
            <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/oldDate"
                    android:textSize="15dp"
                    android:hint="-请选择-"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:background="@drawable/edit_draw"
                    android:layout_marginLeft="20dp"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
        >
            <TextView
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:text="@string/remark"
                    android:textSize="15dp"
                    android:textColor="@color/black"
            />
            <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:id="@+id/remark"
                    android:textSize="15dp"
                    android:hint="@string/TT"
                    android:background="@drawable/edit_draw"
                    android:layout_marginLeft="20dp"
            />
        </LinearLayout>
    </LinearLayout>

    <Button
            android:id="@+id/upData1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_draw"
            android:foreground="@drawable/ripple"
            android:text="@string/add"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
    />

    <Button
        android:id="@+id/gotoShowNo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ok_button_blue_draw"
        android:foreground="@drawable/ripple"
        android:text="查看待办事项  💨"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
/>

</LinearLayout>